--- a/files/Getting_Started.html
+++ b/files/Getting_Started.html
@@ -3,10 +3,10 @@
      It will be read and overwritten.
      DO NOT EDIT! -->
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
-<TITLE>Bookmarks</TITLE>
-<H1>Bookmarks</H1>
+<TITLE>Azure Stack Learning</TITLE>
+<H1>Azure Stack Learning</H1>
 <DL><p>
-    <DT><H3 ADD_DATE="1514389359" LAST_MODIFIED="1514389359" PERSONAL_TOOLBAR_FOLDER="false">Azure Stack - Getting Started</H3>
+    <DT><H3 ADD_DATE="1514389359" LAST_MODIFIED="1514389359" PERSONAL_TOOLBAR_FOLDER="false">Getting Started | <A HREF="https://channel9.msdn.com/Browse/AllContent" ADD_DATE="1586461475">Channel 9</A></H3>
     <DL><p>
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Marketplace-Syndication?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Marketplace Syndication</A>
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Offer-Services-to-Tenants-Plans?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Offer Services to Tenants: Plans</A>
@@ -17,5 +17,8 @@
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Offer-Services-to-Tenants-Offers?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Offer Services to Tenants: Offers</A>
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Offer-Services-to-Tenants-Tenant-Subscriptions?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Offer Services to Tenants: Tenant Subscriptions</A>
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Create-a-VM-on-the-Admin-Portal?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Create a VM on the Admin Portal</A>
+    </DL><p>
+    <DL><p>
+
     </DL><p>
 </DL><p>
