--- a/files/Getting_Started.html
+++ b/files/Getting_Started.html
@@ -1,5 +1,5 @@
 <!DOCTYPE NETSCAPE-Bookmark-file-1>
-<!-- This is an automatically generated file.
+<!-- This is an automatically generated file.https://upload.wikimedia.org/wikipedia/en/thumb/2/2a/Microsoft_Channel_9_logo.png/250px-Microsoft_Channel_9_logo.png
      It will be read and overwritten.
      DO NOT EDIT! -->
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
