--- a/files/Getting_Started.html
+++ b/files/Getting_Started.html
@@ -6,7 +6,9 @@
 <TITLE>Azure Stack Learning</TITLE>
 <H1>Azure Stack Learning</H1>
 <DL><p>
-    <DT><H3 ADD_DATE="1514389359" LAST_MODIFIED="1514389359" PERSONAL_TOOLBAR_FOLDER="false">Getting Started | <A HREF="https://channel9.msdn.com/Browse/AllContent" ADD_DATE="1586461475">Channel 9</A></H3>
+
+    <A HREF="https://channel9.msdn.com/Browse/AllContent" ADD_DATE="1586461475"><img src = "https://upload.wikimedia.org/wikipedia/en/thumb/2/2a/Microsoft_Channel_9_logo.png/250px-Microsoft_Channel_9_logo.png" width="200"/></a>
+    <DT><H2 ADD_DATE="1514389359" LAST_MODIFIED="1514389359" PERSONAL_TOOLBAR_FOLDER="false">Getting Started | Channel 9</H2>
     <DL><p>
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Marketplace-Syndication?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Marketplace Syndication</A>
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Offer-Services-to-Tenants-Plans?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Offer Services to Tenants: Plans</A>
@@ -18,7 +20,10 @@
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Offer-Services-to-Tenants-Tenant-Subscriptions?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Offer Services to Tenants: Tenant Subscriptions</A>
         <DT><A HREF="https://channel9.msdn.com/blogs/Get-Started-with-Azure-Stack/Get-Started-with-Azure-Stack-Create-a-VM-on-the-Admin-Portal?term=Get%20Started%20with%20Azure%20Stack&lang-en=true" ADD_DATE="1586461475">Create a VM on the Admin Portal</A>
     </DL><p>
+        
+    <A HREF="https://www.youtube.com/" ADD_DATE="1586461475"><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Logo_of_YouTube_%282015-2017%29.svg/1024px-Logo_of_YouTube_%282015-2017%29.svg.png" width="200"/></A>
+    <DT><H2 ADD_DATE="1514389359" LAST_MODIFIED="1514389359" PERSONAL_TOOLBAR_FOLDER="false">Microsoft Azure</H2>
     <DL><p>
-
+        <DT><A HREF="https://www.youtube.com/playlist?list=PLLasX02E8BPBeUs0as1Bhy9t3WtUmtLwE" ADD_DATE="1586461475">Microsoft Azure Infrastructure Azure Stack Channel</A>
     </DL><p>
 </DL><p>
